client/src/components/Nav/style.scss
header {
    margin: 0 0 2rem;
    padding: 2rem 10%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 0 3px 1px rgba(150, 150, 150, 0.8);

    .header-logo {
        width: 66px;
    }

    &.header-theme__light {
        background-image: linear-gradient(to bottom, black , indigo, blueviolet, indigo, black);
    }

    &.header-theme__dark {
        background-image: linear-gradient(to bottom, black , rebeccapurple, black);

        nav {

            a,
            a:active,
            a:visited,
            .logout-link {
                color: white;
                &:hover {
                    text-shadow: 1px 1px 2px blueviolet;
                }

            }

        }

        .header-theme-toggle {
            border-radius: 50%;                
        }
    }

    .header-theme-toggle {
        display: inline-block;
        vertical-align: text-bottom;
        width: 1.8rem;
        opacity: 0.8;
        cursor: pointer;
        transition: opacity 0.15s linear;

        &:hover {
            opacity: 1;
        }
    }

    nav {
        display: inline-block;
        font-size: 1.5rem;
        margin-right: 1rem;
        vertical-align: bottom;
        
    
        a,
        a:active,
        a:visited,
        .logout-link {
            text-decoration: none;
            color: white;
            opacity: 0.5;
            transition: all 0.15s linear;
            margin: 0 1rem;
            cursor: pointer;

            &:hover {
                opacity: 1;
                text-shadow: 1px 1px 2px #555;
                color: white;
            }
        }

        .logout-link {
            display: inline;
            margin: 0;
            margin-left: 1rem;
        }
    }
}

h1, h6 {
    align-items: center;
    text-align: center;
    color: white;
}

h1 {
    font-size: 50px;
}

